Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -20,11 +20,11 @@ slides:
     url: '#'
     text1: Freshman
     text2: Theo Owens
-  - image: uploads/basketball-slide-3_DSC_2595.jpg
+  - image: /uploads/daizon.jpg
     alt-text:
     url: '#'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1: Sophomore
+    text2: Daizon Scott
 ---
 
 <div class="container slider-container sub-nav-marg">
