Updated 'soccer.html' via CloudCannon

--- a/soccer.html
+++ b/soccer.html
@@ -28,8 +28,8 @@ slides:
   - image: uploads/soccer-slide-5_D51_3186.jpg
     alt-text:
     url: '#'
-    text1: Apply here
-    text2: Ipsum Lorem!
+    text1:
+    text2: '#55 Swearengen'
 ---
 
 <div class="container slider-container sub-nav-marg">
