--- a/soccer.html
+++ b/soccer.html
@@ -107,7 +107,7 @@ slides:
         		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege" target="_blank" rel="noopener">More Athletics Videos</a>
         	</div>
 
-        <!- YouTube Modal ->
+YouTube Modal
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
