Updated 'soccer.html' via CloudCannon

--- a/soccer.html
+++ b/soccer.html
@@ -13,8 +13,8 @@ slides:
   - image: uploads/soccer-slide-2_D72_9565.jpg
     alt-text:
     url: '#'
-    text1: Apply here
-    text2: Ipsum Lorem
+    text1:
+    text2: Alexis Molina
   - image: uploads/soccer-slide-3_D72_0245.jpg
     alt-text:
     url: '#'
@@ -101,11 +101,11 @@ slides:
     <!-- <div class="row">
       <div class="col-md-12">
         <div id="wrapper">
-          <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon" />&#160;Videos</h2>
+          <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon" />&#160;Videos
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege" target="_blank" rel="noopener">More Athletics Videos</a>
-        	</div>
+        	
 
 YouTube Modal
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -125,8 +125,8 @@ YouTube Modal
             </div>
           </div>
         </div>
-      </div>
-    </div> -->
+      
+     -->
 </section>
 <!-- Coaches Section -->
 <section class="coach-section">
