Updated 'facilities/sports-facilities/index.html' via CloudCannon

--- a/facilities/sports-facilities/index.html
+++ b/facilities/sports-facilities/index.html
@@ -72,7 +72,7 @@ title: Sports Facilities
       <div class="col-md-8">
         <h2 id="soccer-field" class="blue-heading link__offset">Soccer Field</h2>
         <p class="editable">
-            
+            KCC men's soccer team plays on one of the finest natural grass fields in all of Illinois. Situated along the scenic Kankakee River, the beautifully manicured pitch is a full size regulation 120x80 field.&nbsp;<br /><br />With the recent additions of bench shelters and bleachers, KCC boasts one of the premier soccer fields of any NCAA or NJCAA facilities in Illinois.
         </p>
       </div>
     </div>
