--- a/baseball.html
+++ b/baseball.html
@@ -98,11 +98,11 @@ slides:
     <!-- <div class="row">
       <div class="col-md-12">
         <div id="wrapper">
-          <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon" />&#160;Videos</h2>
+          <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon" />&#160;Videos
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege" target="_blank" rel="noopener">More Athletics Videos</a>
-        	</div>
+        	
 
     YouTube Modal
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -122,8 +122,8 @@ slides:
             </div>
           </div>
         </div>
-      </div>
-    </div> -->
+      
+     -->
 </section>
 <!-- Coaches Section -->
 <section class="coach-section">
@@ -325,10 +325,10 @@ slides:
         <h6 class="coach-title editable">Assistant Coach</h6>
 
         <div class="editable">
-            <p>Coach Shafer is entering his third season as an assistant at KCC. Shafer attended Valparaiso University from 2007-10 prior to being selected by the Chicago Cubs in the 2010 Major League Baseball Amateur Draft. In 2010 at Valparaiso, Shafer tallied 121 strikeouts, second-most in Crusader history and third m​ost in Horizon League history, earning him Horizon League Pitcher of the Year and First Team All-Conference honors.</p>
+            <p>Coach Shafer is entering his fourth season as an assistant at KCC. Shafer attended Valparaiso University from 2007-10 prior to being selected by the Chicago Cubs in the 2010 Major League Baseball Amateur Draft. In 2010 at Valparaiso, Shafer tallied 121 strikeouts, second-most in Crusader history and third m​ost in Horizon League history, earning him Horizon League Pitcher of the Year and First Team All-Conference honors.</p>
             <p>Shafer pitched in the Cubs organization from 2010 to 2012, posting a career 2.99 ERA and striking out 110 batters in 111.1 innings. In 2013 Shafer pitched for the Frontier Greys and in 2014 for the River City Rascals, both in the Frontier League of Independent Baseball.</p>
             <p>For the Cavaliers, he works with pitchers and catchers and assists with recruiting. Shafer also works as an academic success coach for the Athletic Department. Coach Shafer has a bachelor's degree in psychology from Ft. Hayes State University (2015).</p>
-            <p>In addition to his coaching at KCC, Shafer has served as head coach of the varsity boys basketball team at Peotone High School. Coach Shafer resides in Manteno with his wife, Jill, and their son, Carver.</p>
+            <p>Coach Shafer resides in Manteno with his wife, Jill, and their son, Carver.</p>
         </div>
       </div>
       <div class="modal-footer">
