Correct url base segment in sub-nav

--- a/softball/stats/index.html
+++ b/softball/stats/index.html
@@ -2,7 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: Soccer Stats
-base: baseball
+base: softball
 ---
 
 <section class="container sub-nav-marg">
