--- a/volleyball/stats/index.html
+++ b/volleyball/stats/index.html
@@ -2,7 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: Volleyball Stats
-base: baseball
+base: volleyball
 ---
 
 <section class="container sub-nav-marg">
