--- a/womens-basketball/roster/index.html
+++ b/womens-basketball/roster/index.html
@@ -2,7 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: Women's Basketball Roster
-base: women's basketball
+base: womens-basketball
 ---
 
 <section id="table-area" class="roster-container">
