--- a/mens-basketball/roster/index.html
+++ b/mens-basketball/roster/index.html
@@ -2,7 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: "Men's Basketball Roster"
-base: "men's basketball"
+base: mens-basketball
 ---
 
 <section id="table-area" class="roster-container">
