--- a/mens-basketball/schedule/index.html
+++ b/mens-basketball/schedule/index.html
@@ -3,7 +3,7 @@ layout: schedule-page
 baseurl: ../../
 title: Men's Basketball Schedule
 sport: 7
-base: men's basketball
+base: mens-basketball
 ---
 <!-- Schedule page content -->
 {% include schedule-table.html %}
