--- a/mens-basketball/stats/index.html
+++ b/mens-basketball/stats/index.html
@@ -2,7 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: Men's Basketball Stats
-base: baseball
+base: mens-basketball
 ---
 
 <section class="container sub-nav-marg">
