--- a/womens-basketball/schedule/index.html
+++ b/womens-basketball/schedule/index.html
@@ -3,7 +3,7 @@ layout: schedule-page
 baseurl: ../../
 title: Women's Basketball Schedule
 sport: 6
-base: women's basketball
+base: womens-basketball
 ---
 <!-- Schedule page content -->
 {% include schedule-table.html %}
