--- a/womens-basketball/stats/index.html
+++ b/womens-basketball/stats/index.html
@@ -2,7 +2,7 @@
 layout: sub-nav
 baseurl: ../../
 title: Women's Basketball Stats
-base: baseball
+base: womens-basketball
 ---
 
 <section class="container sub-nav-marg">
