Add name to in page anchor for soccer

--- a/soccer.html
+++ b/soccer.html
@@ -105,7 +105,7 @@ slides:
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege" target="_blank" rel="noopener">More Athletics Videos</a>
-        	
+
 
 YouTube Modal
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -125,14 +125,14 @@ YouTube Modal
             </div>
           </div>
         </div>
-      
+
      -->
 </section>
 <!-- Coaches Section -->
 <section class="coach-section">
   <div class="container">
     <div class="row text-left">
-      <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/soccer.svg" class="icon-middle" alt="" />&#160;&#160;Coaches</h4>
+      <h4 id="coaches" name="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/soccer.svg" class="icon-middle" alt="" />&#160;&#160;Coaches</h4>
     </div>
     <!-- ========================================================================================
     =============================================================================================
