Fix for jumplinks required not only id but also name for mobile

--- a/baseball.html
+++ b/baseball.html
@@ -102,7 +102,7 @@ slides:
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege" target="_blank" rel="noopener">More Athletics Videos</a>
-        	
+
 
     YouTube Modal
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -122,14 +122,14 @@ slides:
             </div>
           </div>
         </div>
-      
+
      -->
 </section>
 <!-- Coaches Section -->
 <section class="coach-section">
   <div class="container">
     <div class="row text-left">
-      <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="Icon of a baseball" />&#160;&#160;Coaches</h4>
+      <h4 id="coaches" name="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="Icon of a baseball" />&#160;&#160;Coaches</h4>
     </div>
     <!-- ========================================================================================
     =============================================================================================
