--- a/facilities/sports-facilities/index.html
+++ b/facilities/sports-facilities/index.html
@@ -38,7 +38,7 @@ title: Sports Facilities
           <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/gymnasium.jpg" alt="Photo of the George S. Ryan Activities Center" />
       </div>
       <div class="col-md-8">
-        <h2 id="gym" class="blue-heading link__offset">George S. Ryan Activities Center</h2>
+        <h2 id="gym" name="gym" class="blue-heading link__offset">George S. Ryan Activities Center</h2>
         <p class="editable">The George H. Ryan Activities Center is the home of the KCC men’s and women’s basketball and women's volleyball teams.</p>
         <p class="editable">Located southeast of the main building, it includes regulation size basketball and volleyball courts with a seating capacity of 1,200 spectators. The gym also provides the college with a large, attractive facility for recreational classes, cultural events, and commencement programs.</p>
       </div>
@@ -48,7 +48,7 @@ title: Sports Facilities
           <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/aerial-baseball-field.jpg" alt="Aerial Photograph of KCC's baseball field" />
       </div>
       <div class="col-md-8">
-        <h2 id="baseball-field" class="blue-heading link__offset">Baseball Field</h2>
+        <h2 id="baseball-field" name="baseball-field" class="blue-heading link__offset">Baseball Field</h2>
         <p class="editable">From manicured baselines to lush infield and outfield grass, the beautiful Cavaliers baseball field is a valued home for KCC players.</p>
         <p class="editable">The Cavs' baseball home is located in the northwest corner of the college campus. It has a seating capacity of 1,000. Playing dimensions are 330 feet down the lines, 380 feet in the power alleys and 405 feet to straightaway center.</p>
       </div>
@@ -58,7 +58,7 @@ title: Sports Facilities
           <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/aerial-softball-field.jpg" alt="Aerial Photograph of KCC's softball field" />
       </div>
       <div class="col-md-8">
-        <h2 id="softball-field" class="blue-heading link__offset">Softball Field</h2>
+        <h2 id="softball-field" name="softball-field" class="blue-heading link__offset">Softball Field</h2>
         <p class="editable">The Cavalier softball field is one of the finest facilities in community college softball.</p>
         <p class="editable">What sets this field apart from others is the hitting background. It consist of two rows of pine trees that give the hitter an excellent view of the ball and is very esthetic for the softball fan.</p>
         <p class="editable">Recent additions to the facility include an extensive scoreboard, spacious dugouts with a press box, underground watering system, outfield fence and bleachers seating for 110 Cavalier fans!</p>
@@ -70,7 +70,7 @@ title: Sports Facilities
           <img class="img-fluid img-radius" src="{{page.baseurl}}uploads/soccer-field.jpg" alt="Photo of KCC's soccer field" />
       </div>
       <div class="col-md-8">
-        <h2 id="soccer-field" class="blue-heading link__offset">Soccer Field</h2>
+        <h2 id="soccer-field" name="soccer-field" class="blue-heading link__offset">Soccer Field</h2>
         <p class="editable">
             KCC men's soccer team plays on one of the finest natural grass fields in all of Illinois. Situated along the scenic Kankakee River, the beautifully manicured pitch is a full size regulation 120x80 field.&nbsp;<br /><br />With the recent additions of bench shelters and bleachers, KCC boasts one of the premier soccer fields of any NCAA or NJCAA facilities in Illinois.
         </p>
