--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -23,7 +23,7 @@ title: Fitness Center
         </li>
         <li class="nav-item">
           <a href="{{page.baseurl}}{{page.base}}/fitness-center#testimonials" class="nav-link sub-nav-link">Testimonials</a>
-         
+
         </li>
       </ul>
     </div>
@@ -49,7 +49,7 @@ title: Fitness Center
             <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
             <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
             <p>&nbsp;</p>
-            <h3 id="membership" class="blue-heading link__offset">Become a Member</h3>
+            <h3 id="membership" name="membership" class="blue-heading link__offset">Become a Member</h3>
             <p>Sign up at KCC's Accounting Office (second floor of the college) and at the Fitness Center, located in the Ice Valley Centre at 1601 River Road, Kankakee.</p>
             <h2>&nbsp;</h2>
             <h5><strong>Membership Options</strong></h5>
@@ -137,12 +137,12 @@ title: Fitness Center
             <p>&nbsp;</p>
             <p>Review details about enrolling in the Fitness Center for College Credit to decide which option fits your needs best.</p>
             <p>&nbsp;</p>
-            <h2 id="personal-trainers" class="blue-heading link__offset">Personal Trainers and Staff</h2>
+            <h2 id="personal-trainers" name="personal-trainers" class="blue-heading link__offset">Personal Trainers and Staff</h2>
             <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
             <p><img src="/uploads/dsc-0173-home.jpg" width="655" height="250" /></p>
             <h5>Rates</h5>
             <p>Training sessions are one hour. You will have an initial consultation to discuss specific fitness goals. Up to three people can participate in a session. Rates are:</p>
-            
+
             <table width="100%" class="mv-Table-6" cellspacing="0" style="font-size:1em"><tbody><tr class="mv-TableHeaderRow-6"><th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​No. of Persons</th>
 <th class="mv-TableHeaderOddCol-6" rowspan="1" colspan="1">​1 session</th>
 <th class="mv-TableHeaderEvenCol-6" rowspan="1" colspan="1">​5 sessions</th>
@@ -188,7 +188,7 @@ title: Fitness Center
             <p><strong>Francine Castongia</strong></p>
             <p>Fitness specialist<br />815-802-8610<br />fcastongia@kcc.edu</p>
             <p>&nbsp;</p>
-            <h2 id="testimonials" class="blue-heading link__offset">Testimonials</h2>
+            <h2 id="testimonials" name="testimonials" class="blue-heading link__offset">Testimonials</h2>
             <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
             <p>Lamanda Garcia<em><br />&ldquo;Yvonne was an amazing coach. She pushed me each class.&rdquo;</em></p>
             <p>Donna Schmidt<em><br />&ldquo;I have lost inches, gained muscle mass and become much stronger with LESS aches and pain.&rdquo;</em></p>
