--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -22,7 +22,7 @@ _options:
                 <div class="col-md-12 text-center">
                     <p>KCC Cavalier Baseball Stats on NJCAA Region 4 Website <span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">View Stats</a></span></p>
                 </div>
-                <div class="col-md-12 text-center">
+                <div class="editable">
                     <p>Add text here</p>
                 </div>
             </div>
