Updated 'baseball/stats/index.html' via CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -22,11 +22,12 @@ _options:
                 <div class="col-md-12 text-center">
                     <p>KCC Cavalier Baseball Stats on NJCAA Region 4 Website <span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">View Stats</a></span></p>
                 </div>
-                <div class="editable">
-                    <p>Add text here</p>
-                </div>
             </div>
         </div>
       </div>
   </div>
 </section>
+
+<section class="container sub-nav-marg"><div class="editable">
+                    <p>Add text here</p>
+                </div></section>
