Updated 'baseball/stats/index.html' via CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -15,14 +15,15 @@ base: baseball
                 </div>
                 <div>
                     <p class="present-before-paste">&nbsp;</p>
-                    <p class="present-before-paste"><a href="/uploads/Baseball - Career Hitting.pdf">Career Hitting</a></p>
-                    <p class="present-before-paste">Career Pitching</p>
-                    <p class="present-before-paste">Player Awards and Honors</p>
-                    <p class="present-before-paste">Pro Players and Former Cavaliers</p>
-                    <p class="present-before-paste">Season Hitting</p>
-                    <p class="present-before-paste">Team Championships and Awards</p>
-                    <p class="present-before-paste">Tea Hitting</p>
-                    <p class="present-before-paste">Team Pitching</p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Hitting.pdf">Career Hitting</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Pitching.pdf">Career Pitching</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Player Awards and Honors.pdf">Player Awards and Honors</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Pro Players and Form Cavs.pdf">Pro Players and Former Cavaliers</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Season Hitting.pdf">Season Hitting</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Season Pitching.pdf">Season Pitching</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Championships and Awards.pdf">Team Championships and Awards</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Hitting.pdf">Team Hitting</a></p>
+                    <p class="present-before-paste"><a href="/uploads/Baseball - Team Pitching.pdf">Team Pitching</a></p>
                     <p class="present-before-paste">&nbsp;</p>
                 </div>
             </div>
