Updated 'baseball/stats/index.html' via CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -23,7 +23,7 @@ base: baseball
                     <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Season Pitching.pdf">Season Pitching</a></p>
                     <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Championships and Awards.pdf">Team Championships and Awards</a></p>
                     <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Hitting.pdf">Team Hitting</a></p>
-                    <p class="present-before-paste"><a href="/uploads/Baseball - Team Pitching.pdf">Team Pitching</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Team Pitching.pdf">Team Pitching</a></p>
                     <p class="present-before-paste">&nbsp;</p>
                 </div>
             </div>
