Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -99,11 +99,11 @@ slides:
     <!-- <div class="row">
       <div class="col-md-12">
         <div id="wrapper">
-          <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon" />&#160;Videos</h2>
+          <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/video.svg" class="icon-middle" alt="Video icon" />&#160;Videos
         	<div id="yt_list" class="yt_list">
         	</div>
         		<a class="btn btn-primary yt-button" href="https://www.youtube.com/user/KankakeeCommCollege" target="_blank" rel="noopener">More Athletics Videos</a>
-        	</div>
+        	
 
     YouTube Modal
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -123,8 +123,8 @@ slides:
             </div>
           </div>
         </div>
-      </div>
-    </div> -->
+      
+     -->
 </section>
 <!-- Coaches Section -->
 <section class="coach-section">
@@ -317,9 +317,10 @@ slides:
         </h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
-            <p>Coach Matt Neaville is in his first year as Assistant Men&rsquo;s Basketball Coach at Kankakee Community College.&nbsp; He brings experience in many different areas which include; recruiting, team preparation, player development, and building relationships with players and coaches.&nbsp; Matt Neaville is from Urbana, Illinois and he prepped at Urbana High School where he was named All-Area first team, All-State, and MVP as a junior and senior. Matt Neaville played collegiately at Parkland Community College where he was named a third team All-American performer. In 2006-07, Neaville averaged 26.2 points per game, which ranked him fourth in the nation in scoring. Neaville set a new junior college national record for three pointers in a game with 17. Neaville played for head coach Chris Warren at Parkland and was named conference Player of the Year, Freshman Player of the Year, All-Conference, and All-Region. Neaville went on to play at Union University in Jackson, Tennessee.&nbsp;</p>
-            <p>Neaville was named a first team performer for his play during the 2008-09 season. In his two seasons as a Bulldog, Neaville reached the 1,000 point mark for his career in just 44 games and tallied 1,375 career points. He stands in second place for made three pointers in a career at Union with 290 three pointers. He also holds the record for three pointers in a season (153) and three pointers made in a game (11) at Union. Neaville was named an NAIA first team All-American and TranSouth Conference Player of the Year.&nbsp; He graduated with his Bachelors in Sports Management and Marketing.&nbsp;</p>
-            <p>Coach Neaville went on to play professional basketball in Mexico once he graduated from Union University.&nbsp; He averaged 17 ppg in his first season in professional basketball. After he played in Mexico, Coach Neaville played semi-professional basketball throughout the states.&nbsp; He played for Springfield Xpress, Kankakee Soldiers, Danville Riverhawks and Champaign Swarm. He retired from professional basketball in 2014.&nbsp; In 2015, Coach Neaville was Director of Basketball Operations and Assistant Men&rsquo;s Basketball Coach for the Champaign Swarm.&nbsp; During the 2015 season, he ended up taking over Head Coaching duties for Coach John Spezia as he stepped down.&nbsp; In 2016-2018, Coach Neaville was the Assistant Men&rsquo;s Basketball Coach for the Danville Coal Miners.&nbsp; Danville Coal Miners played in the CBA, semiprofessional basketball league.&nbsp; Coach Neaville also coached for St. Thomas School in Philo Illinois.&nbsp; He served as the Head Coach for the 8th grade boys&rsquo; basketball team from 2012-2015.&nbsp; Coach Neaville also owns his own basketball academy named, Neaville Basketball Academy.&nbsp; He gives training and lessons to the youth and young adults.&nbsp; He plans on keeping it in Urbana, Illinois and also bringing it to the Kankakee area.&nbsp; Coach Neaville has one son, Jaden Neaville that is 7 years old.</p>
+            <p>Coach Matt Neaville is in his first year as Assistant Men&rsquo;s Basketball Coach at KCC. He brings experience in recruiting, team preparation and player development. An Urbana native, Neaville started his college career at Parkland College, where he was a third team All-American. In 2006-07, he was fourth in the nation in scoring (26.2 ppg) and set an NJCAA Div. II record for three pointers in a game (17). Other accolades at Parkland were conference Player of the Year, Freshman Player of the Year, All-Conference, and All-Region.</p>
+            <p>Neaville transferred to Union University in Jackson, Tenn., where he was an NAIA first team All-American and TranSouth Conference Player of the Year. He scored 1,000 points for the Bulldogs in just 44 games. For his career at Union, Neaville tallied 1,375 points, and holds second place all-time for three-pointers (290), has the most three pointers for a season (153) and a game (11). He graduated with a degree in sports management and marketing.</p>
+            <p>Next, Neaville played professionally in Mexico, averaging 17 ppg in his first season. He then played semi-professional basketball for the Springfield Xpress, Kankakee Soldiers, Danville Riverhawks and Champaign Swarm before ending his professional playing career in 2014. For the next season, he took on various positions including head coach for the Champaign Swarm. From 2016-2018, Neaville was the assistant coach for the Danville Coal Miners of the CBA, a semiprofessional league.</p>
+            <p>Other than his coaching duties, Coach Neaville runs the Neaville Basketball Academy, offering training and lessons to youth and young adults. He also has a son, Jaden.</p>
         </div>
       </div>
       <div class="modal-footer">
