Updated 'baseball/stats/index.html' via CloudCannon

--- a/baseball/stats/index.html
+++ b/baseball/stats/index.html
@@ -11,7 +11,7 @@ base: baseball
         <div class="editable">
             <div class="row row-space">
                 <div class="col-md-12 text-center">
-                    <p <a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">View Stats</a></p>
+                  <p class="present-before-paste"><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">Baseball Stats on NJCAA Region 4 Website </a></span></p>
                 </div>
                 <div>
                     <p class="present-before-paste">&nbsp;</p>
