--- a/mens-basketball/stats/index.html
+++ b/mens-basketball/stats/index.html
@@ -4,7 +4,7 @@ baseurl: ../../
 title: Men's Basketball Stats
 base: mens-basketball
 ---
-
+<!--
 <section class="container sub-nav-marg">
   <div class="row">
       <div class="col-md-12">
@@ -14,3 +14,23 @@ base: mens-basketball
       </div>
   </div>
 </section>
+-->
+
+<section class="container sub-nav-marg">
+  <div class="row">
+      <div class="col-md-12">
+        <div class="editable">
+            <div class="row row-space">
+                <div class="col-md-12 text-center">
+                  <p class="present-before-paste"><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">Basketball Stats on NJCAA Region 4 Website </a></span></p>
+                </div>
+                <div>
+                    <p class="present-before-paste">&nbsp;</p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Hitting.pdf">All Americans</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Pitching.pdf">Team Records</a></p>
+                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Player Awards and Honors.pdf">Individual Records</a></p>
+
+                    <p class="present-before-paste">&nbsp;</p>
+                </div>
+            </div>
+        </div></div></div></section>
