--- a/mens-basketball/stats/index.html
+++ b/mens-basketball/stats/index.html
@@ -22,7 +22,7 @@ base: mens-basketball
         <div class="editable">
             <div class="row row-space">
                 <div class="col-md-12 text-center">
-                  <p class="present-before-paste"><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://region4sports.com/sports/bsb/2017-18/teams/kankakeecommunitycollege?view=lineup">Basketball Stats on NJCAA Region 4 Website </a></span></p>
+                  <p class="present-before-paste"><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://njcaa.org/sports/mbkb/2017-18/div1/teams/kankakeecommunitycollege">Basketball Stats on NJCAA Region 4 Website </a></span></p>
                 </div>
                 <div>
                     <p class="present-before-paste">&nbsp;</p>
