--- a/mens-basketball/stats/index.html
+++ b/mens-basketball/stats/index.html
@@ -4,6 +4,7 @@ baseurl: ../../
 title: Men's Basketball Stats
 base: mens-basketball
 ---
+
 <!--
 <section class="container sub-nav-marg">
   <div class="row">
@@ -22,15 +23,18 @@ base: mens-basketball
         <div class="editable">
             <div class="row row-space">
                 <div class="col-md-12 text-center">
-                  <p class="present-before-paste"><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://njcaa.org/sports/mbkb/2017-18/div1/teams/kankakeecommunitycollege">Basketball Stats on NJCAA Region 4 Website </a></span></p>
+                    <p><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://njcaa.org/sports/mbkb/2017-18/div1/teams/kankakeecommunitycollege">Basketball Stats on NJCAA Region 4 Website </a></span></p>
                 </div>
                 <div>
-                    <p class="present-before-paste">&nbsp;</p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Hitting.pdf">All Americans</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Career Pitching.pdf">Team Records</a></p>
-                    <p class="present-before-paste"><a target="_blank" href="/uploads/Baseball - Player Awards and Honors.pdf">Individual Records</a></p>
-
-                    <p class="present-before-paste">&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p><a target="_blank" href="/uploads/Mens BBall - All Americans.pdf">All Americans</a></p>
+                    <p><a target="_blank" href="/uploads/Mens Basketball Records - Career.pdf">Career Records</a></p>
+                    <p><a target="_blank" href="/uploads/Mens Basketball Records - Individual.pdf">Individual Records</a></p>
+                    <p><a target="_blank" href="/uploads/Mens Basketball Records - Team-by-Team.pdf">Team by Team Records</a></p>
+                    <p><a target="_blank" href="/uploads/Mens Basketball Records - Team.pdf">Team Records</a></p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
                 </div>
             </div>
         </div></div></div></section>
