Updated 'soccer/stats/index.html' via CloudCannon

--- a/soccer/stats/index.html
+++ b/soccer/stats/index.html
@@ -5,6 +5,7 @@ title: Soccer Stats
 base: soccer
 ---
 
+<!--
 <section class="container sub-nav-marg">
   <div class="row">
       <div class="col-md-12">
@@ -14,3 +15,22 @@ base: soccer
       </div>
   </div>
 </section>
+
+-->
+
+
+<section class="container sub-nav-marg">
+  <div class="row">
+      <div class="col-md-12">
+        <div class="editable">
+            <div class="row row-space">
+                <div class="col-md-12 text-center">
+                    <p><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://stats.njcaa.org/sports/msoc/2017-18/div1/teams/kankakeecommunitycollege">Soccer Stats on NJCAA Region 4 Website </a></span></p>
+                </div>
+                <div>
+                    <p>&nbsp;</p>
+                    <p><a target="_blank" href="/uploads/Mens BBall - All Americans.pdf">Soccer Records</a></p>
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+        </div></div></div></section>
