Updated 'soccer/stats/index.html' via CloudCannon

--- a/soccer/stats/index.html
+++ b/soccer/stats/index.html
@@ -29,7 +29,7 @@ base: soccer
                 </div>
                 <div>
                     <p>&nbsp;</p>
-                    <p><a target="_blank" href="/uploads/Mens BBall - All Americans.pdf">Soccer Records</a></p>
+                    <p><a target="_blank" href="/uploads/Soccer - Records.pdf">Soccer Records</a></p>
                     <p>&nbsp;</p>
                 </div>
             </div>
