Updated 'softball/stats/index.html' via CloudCannon

--- a/softball/stats/index.html
+++ b/softball/stats/index.html
@@ -5,6 +5,7 @@ title: Softball Stats
 base: softball
 ---
 
+<!--
 <section class="container sub-nav-marg">
   <div class="row">
       <div class="col-md-12">
@@ -14,3 +15,21 @@ base: softball
       </div>
   </div>
 </section>
+
+-->
+
+<section class="container sub-nav-marg">
+  <div class="row">
+      <div class="col-md-12">
+        <div class="editable">
+            <div class="row row-space">
+                <div class="col-md-12 text-center">
+                    <p><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://stats.njcaa.org/sports/sball/2017-18/div2/teams/kankakeecommunitycollege">Softball Stats on NJCAA Region 4 Website </a></span></p>
+                </div>
+                <div>
+                    <p>&nbsp;</p>
+                    <p><a target="_blank" href="/uploads/Soccer - Records.pdf">Softball Records</a></p>
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+        </div></div></div></section>
