--- a/softball/stats/index.html
+++ b/softball/stats/index.html
@@ -24,11 +24,10 @@ base: softball
         <div class="editable">
             <div class="row row-space">
                 <div class="col-md-12 text-center">
-                    <p><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://stats.njcaa.org/sports/sball/2017-18/div2/teams/kankakeecommunitycollege">Softball Stats on NJCAA Region 4 Website </a></span></p>
+                    <p><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://stats.njcaa.org/sports/sball/2017-18/div2/teams/kankakeecommunitycollege">Softball Stats on NJCAA Region 4 Website&nbsp;</a></span></p>
                 </div>
                 <div>
-                    <p>&nbsp;</p>
-                    <p><a target="_blank" href="/uploads/Soccer - Records.pdf">Softball Records</a></p>
+                    <p>All Americans</p>
                     <p>&nbsp;</p>
                 </div>
             </div>
