Updated 'softball/stats/index.html' via CloudCannon

--- a/softball/stats/index.html
+++ b/softball/stats/index.html
@@ -27,7 +27,12 @@ base: softball
                     <p><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://stats.njcaa.org/sports/sball/2017-18/div2/teams/kankakeecommunitycollege">Softball Stats on NJCAA Region 4 Website&nbsp;</a></span></p>
                 </div>
                 <div>
-                    <p>All Americans</p>
+                    <p><a target="_blank" href="/uploads/Softball - All Americans.pdf">All Americans</a></p>
+                    <p><a target="_blank" href="/uploads/Softball Records - Career Records.pdf">Career Records</a></p>
+                    <p><a target="_blank" href="/uploads/Softball Records - Individual Hitting.pdf">Individual Hitting</a></p>
+                    <p><a target="_blank" href="/uploads/Softball Records - Individual Pitching.pdf">Individual Pitching</a></p>
+                    <p><a target="_blank" href="/uploads/Softball - Program History.pdf">Program History</a></p>
+                    <p><a target="_blank" href="/uploads/Softball Records - Team Hitting.pdf">Team Hitting</a></p>
                     <p>&nbsp;</p>
                 </div>
             </div>
