--- a/womens-basketball/stats/index.html
+++ b/womens-basketball/stats/index.html
@@ -5,6 +5,7 @@ title: Women's Basketball Stats
 base: womens-basketball
 ---
 
+<!--
 <section class="container sub-nav-marg">
   <div class="row">
       <div class="col-md-12">
@@ -14,3 +15,20 @@ base: womens-basketball
       </div>
   </div>
 </section>
+-->
+
+<section class="container sub-nav-marg">
+  <div class="row">
+      <div class="col-md-12">
+        <div class="editable">
+            <div class="row row-space">
+                <div class="col-md-12 text-center">
+                    <p><span class="schedule__button-margin"><a class="btn btn-primary" target="_blank" rel="noopener" href="http://njcaa.org/sports/wbkb/2017-18/div2/teams/kankakeecommunitycollege">Women's Basketball Stats on NJCAA Region 4 Website </a></span></p>
+                </div>
+                <div>
+                    <p>&nbsp;</p>
+                    <p><a target="_blank" href="/uploads/Soccer - Records.pdf">Women's Basketball</a></p>
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+        </div></div></div></section>
