Updated 'volleyball/stats/index.html' via CloudCannon

--- a/volleyball/stats/index.html
+++ b/volleyball/stats/index.html
@@ -29,11 +29,11 @@ base: volleyball
                 </div>
                 <div>
                     <p>&nbsp;</p>
-                    <p><a href="/uploads/Volleyball - All Americans.pdf">All Americans</a></p>
-                    <p><a href="/uploads/Volleyball - Individual Career.pdf">Individual Career</a></p>
-                    <p><a href="/uploads/Volleyball - Individual Season.pdf">Individual Season</a></p>
-                    <p><a href="/uploads/Volleyball - Program History.pdf">Program History</a></p>
-                    <p><a href="/uploads/Volleyball - Team Records.pdf">Team Records</a></p>
+                    <p><a target="_blank" href="/uploads/Volleyball - All Americans.pdf">All Americans</a></p>
+                    <p><a target="_blank" href="/uploads/Volleyball - Individual Career.pdf">Individual Career</a></p>
+                    <p><a target="_blank" href="/uploads/Volleyball - Individual Season.pdf">Individual Season</a></p>
+                    <p><a target="_blank" href="/uploads/Volleyball - Program History.pdf">Program History</a></p>
+                    <p><a target="_blank" href="/uploads/Volleyball - Team Records.pdf">Team Records</a></p>
                     <p>&nbsp;</p>
                 </div>
             </div>
