--- a/womens-basketball/stats/index.html
+++ b/womens-basketball/stats/index.html
@@ -30,7 +30,7 @@ base: womens-basketball
                     <p><a target="_blank" href="/uploads/Women’s Basketball - All Americans.pdf">All Americans</a></p>
                     <p><a target="_blank" href="/uploads/Womens BBall career records.pdf">Career Records</a></p>
                     <p><a target="_blank" href="/uploads/Womens Basketball - National Statistics.pdf">National Statistics</a></p>
-                    <p><a href="/uploads/Womens Basketball - Program History.pdf">Program History</a></p>
+                    <p><a target="_blank" href="/uploads/Womens Basketball - Program History.pdf">Program History</a></p>
                     <p><a target="_blank" href="/uploads/Women's Basketball - Where are They Now.pdf">Where Are They Now</a></p>
                     <p>&nbsp;</p>
                     <p>&nbsp;</p>
