--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ slides:
     alt-text:
     url: 'http://athletics.kcc.edu/softball'
     text1: Softball
-    text2: 'KCC Softball 2018 team <br>Jenna Arseneau &#11'
+    text2: 'KCC  <br>Jenna Arseneau &#11'
   - image: uploads/volleyball-slide-3_D4S_6473.jpg
     alt-text:
     url: 'http://athletics.kcc.edu/volleyball'
