Test fix jumplinks by prepending # as /#

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -16,13 +16,13 @@ title: Fitness Center
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center#membership" class="nav-link sub-nav-link">Membership</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#membership" class="nav-link sub-nav-link">Membership</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center#personal-trainers" class="nav-link sub-nav-link">Personal Trainers & Staff</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#personal-trainers" class="nav-link sub-nav-link">Personal Trainers & Staff</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/fitness-center#testimonials" class="nav-link sub-nav-link">Testimonials</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center/#testimonials" class="nav-link sub-nav-link">Testimonials</a>
 
         </li>
       </ul>
