--- a/facilities/sports-facilities/index.html
+++ b/facilities/sports-facilities/index.html
@@ -15,16 +15,16 @@ title: Sports Facilities
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/sports-facilities#gym" class="nav-link sub-nav-link">Activities Center</a>
+          <a href="{{page.baseurl}}{{page.base}}/sports-facilities/#gym" class="nav-link sub-nav-link">Activities Center</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/sports-facilities#baseball-field" class="nav-link sub-nav-link">Baseball Field</a>
+          <a href="{{page.baseurl}}{{page.base}}/sports-facilities/#baseball-field" class="nav-link sub-nav-link">Baseball Field</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/sports-facilities#softball-field" class="nav-link sub-nav-link">Softball Field</a>
+          <a href="{{page.baseurl}}{{page.base}}/sports-facilities/#softball-field" class="nav-link sub-nav-link">Softball Field</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}{{page.base}}/sports-facilities#soccer-field" class="nav-link sub-nav-link">Soccer Field</a>
+          <a href="{{page.baseurl}}{{page.base}}/sports-facilities/#soccer-field" class="nav-link sub-nav-link">Soccer Field</a>
         </li>
       </ul>
     </div>
