Create Donate page

--- a/support/cavalier-club/index.html
+++ b/support/cavalier-club/index.html
@@ -20,6 +20,9 @@ title: Cavalier Club
         <li class="nav-item">
           <a href="{{page.baseurl}}{{page.base}}/cavalier-club" class="nav-link sub-nav-link">Cavalier Club</a>
         </li>
+        <li class="nav-item">
+          <a href="{{page.baseurl}}{{page.base}}/donate" class="nav-link sub-nav-link">Donate</a>
+        </li>
       </ul>
     </div>
   </div>
