Update Hero slider slides with optimized images

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@ slides:
     url: 'http://athletics.kcc.edu/soccer'
     text1: Soccer
     text2: 2017 KCC Cavaliers Soccer
-  - image: /uploads/softball-d3s-9915.jpg
+  - image: /uploads/softball-15-d3s-9915-opt.jpg
     alt-text:
     url: 'http://athletics.kcc.edu/softball'
     text1: Softball
-    text2: 'Jenna Arseneau &#11'
+    text2: 'Jenna Arseneau'
   - image: uploads/volleyball-slide-3_D4S_6473.jpg
     alt-text: Volleyball
     url: 'http://athletics.kcc.edu/volleyball'
     text1: Volleyball
     text2: KCC Volleyball vs <br>Olivet Nazarene
-  - image: /uploads/basketball-dsc-2869-4.jpg
+  - image: /uploads/basketball-slide_opt-dsc_2869.jpg
     alt-text: Men's Basketball
     url: 'http://athletics.kcc.edu/mens-basketball'
     text1: Men's Basketball
