--- a/support/donate/index.html
+++ b/support/donate/index.html
@@ -35,6 +35,9 @@ title: Donate
         <h2 class="blue-heading editable">Donate</h2><br>
         <div class="editable">
           <p>We appreciate your donations and hope to give you in return a great season of collegiate athletics.</p>
+          
+          <div class="col-md-8"><a class="btn btn-primary btn-marg-left" href="https://51743.thankyou4caring.org/page.aspx?pid=298"target=”_blank”>Donate to Athletics</a></div>
+          
         </div>
       </div>
     </div>
