Updated 'support/cash-bash/index.html' via CloudCannon

--- a/support/cash-bash/index.html
+++ b/support/cash-bash/index.html
@@ -32,13 +32,13 @@ title: Cash Bash
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="blue-heading editable">Cash Bash</h2><br>
+        <h2 class="blue-heading editable">Cash Bash</h2><br />
         <div class="editable">
-          <p>Cavalier Cash Bash will be Saturday, Feb. 16, from 6:30 - 11 p.m., at the Quality Inn, 800 N. Kinzie Ave., in Bradley.</p>
-          <p>There will be 24 prize winners including a $5,000 grand prize. There will also be raffle baskets.</p>
-          <p>Tickets are $100. Only 300 tickets will be sold. Each ticket admits two people for drinks and a food buffet. Must be 21 or older to attend. Winners need not be present.</p>
-          <p>For information and tickets, call 815-802-8600.</p>
-          <p>Complete the form, print it out and mail it in with payment.</p>
+            <p>Cavalier Cash Bash will be Saturday, Feb. 16, from 6:30 - 11 p.m., at the Quality Inn, 800 N. Kinzie Ave., in Bradley.</p>
+            <p>There will be 24 prize winners including a $5,000 grand prize. There will also be raffle baskets.</p>
+            <p>Tickets are $100. Only 300 tickets will be sold. Each ticket admits two people for drinks and a food buffet. Must be 21 or older to attend. Winners need not be present.</p>
+            <p>For information and tickets, call 815-802-8600.</p>
+            <p><a target="_blank" href="/uploads/cashbashreg.pdf">Complete the form, print it out and mail it in with payment.</a></p>
         </div>
       </div>
     </div>
